kubernetes/neo/apps/default/echo-server/app/httproute-private.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-private
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "echo-server.${PUBLIC_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: echo-server
      port: 8080
      weight: 100
